--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -1,209 +1,197 @@
-.places {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 45px auto;
-	text-align: center;
+/* STYLING FOR PLACES */
+section.places h1 {
+    font-size:30px;
+    padding-left:30px;
 }
 
-article {
-	display: flex;
-	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
-
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 40px;
-	margin: 20px;
-
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
+.places ul {
+    text-align:center;
 }
 
-.headline {
-	display: flex;
-	flex-direction: row;
-	position: relative;
-
-	height: 80px;	
-	width: 100%;
+.places li {
+    list-style:none;
+    display:inline-block;
 }
 
+.places article {
+    position:relative;  /* necessary for price_by_night */
+    width:390px;
+    padding:20px;
+    margin:20px;
+    border:#FF5A5F 1px solid;
+    border-radius:4px;
+    text-align:center;
+}
+
+.places article h2 {
+    font-size:30px;
+    margin-top:5px;
+    margin-bottom:50px;
+}
+
+/* MORE DETIAL FOR ARTICLE */
 .price_by_night {
-	display: flex;
-	justify-content: center;
-	align-self: flex-end;
-
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
-	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
-	min-width: 60px;
-	height: 60px;
+    position:absolute;
+    top:20px;
+    right:20px;
+    float:right;
+    color:#FF5A5F;
+    border:#FF5A5F 4px solid;
+    border-radius:50%;
+    min-width:60px;
+    height:60px;
+    font-size:30px;
+    line-height:60px;
+    padding:5px;
 }
 
+/* INFORMATION SECTION */
 .information {
-	display: block;
-	height: 80px;
-	width: 100%;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
-
-	padding-top: 5px;
-	padding-bottom: 12px;
-	margin-top: 10px;
-	margin-bottom: 20px;
+    position:relative;
+    height:80px;
+    line-height:80px;
+    border-top: 1px #DDDDDD solid;
+    border-bottom:1px #DDDDDD solid;
 }
 
-.max_guest, .number_rooms, .number_bathrooms {
+.information .max_guest,
+.information .number_rooms,
+.information .number_bathrooms {
+    display:inline-block;
+    width:100px;
+    height:100%;
+}
+
+.max_guest,
+.number_rooms,
+.number_bathrooms {
 	display: inline-block;
-	width: 100px;
-	text-align: center;
-	margin: 0px auto;
-}
-
-.user {
+	margin: 10px;
 	margin-top: 5px;
-	margin-bottom: 5px;	
+	line-height: 10px;
+	width: 100px;
+	background-repeat: no-repeat;
+	background-position: top;
 }
 
+.max_guest p,
+.number_bathrooms p,
+.number_rooms p {
+    margin-top:52.5px;
+}
+
+.max_guest {
+	background-image: url('../images/icon_group.png');
+}
+
+.number_rooms {
+	background-image: url('../images/icon_bed.png');
+}
+
+.number_bathrooms {
+	background-image: url('../images/icon_bath.png');
+}
+
+/* USER */
+.user {
+    text-align:left;
+    margin-top:25px;
+    margin-bottom:15px;
+}
+
+/* DESCRIPTION */
 .description {
-	text-align: left;
+    text-align:left;
 }
 
-h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
+/* .places .amenities */
+.places article .amenities {
+    margin-top:40px;
+    text-align:left;
 }
 
-article .amenities {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	margin-top: 40px;
+.places article .amenities h2 {
+    font-size:16px;
+    border-bottom:1px #DDDDDD solid;
+    padding-bottom:10px;
 }
 
-.article_subtitle {
-	font-size: 16px;
-	text-align: left;
-	width: 100%;
-	border-bottom: 1px solid #DDDDDD;
-	padding: 0px;
-	margin: 0px;
-	padding-bottom: 10px;
+.places article .amenities ul,
+.places article .amenities ul li {
+    list-style:none;
+    display:block;
 }
 
-.article_title {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
+.places article .amenities li {
+    margin-bottom:10px;
 }
 
-article ul {
-	text-align: left;
-	margin-top: 20px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
+.places article .amenities ul {
+    margin-top:-30px;
+    text-align:left;
 }
 
-article li {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-content: flex-start;
-	margin-bottom: 10px;
+.amenity_icon a {
+    padding-left:35px;
 }
-
-.reviews {
-	margin-top: 40px;
-	width: 100%;
-}
-
-.review_item {
-	margin-bottom: 10px;
-}
-
-.review_text {
-	margin: 0px;
-}
-
-article h3 {
-	font-size: 14px;
-	padding: 0px;
-	margin: 0px;
-	margin-bottom: 5px;
-
-}
-
-.guest_icon {
-	display: inline-block;
-	background-image: url("../images/icon_group.png");
+.amenity_icon.tv,
+.amenity_icon.wifi,
+.amenity_icon.pets {
 	background-repeat: no-repeat;
-	background-position: center;
-	width: 50px;
-	height: 50px;
+	background-position: left;
+	background-size: 20px;
+    margin-left:-40px;
 }
 
-.bed_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+.amenity_icon.tv {
+	background-image: url('../images/icon_tv.png');
 }
 
-.bath_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+.amenity_icon.wifi {
+	background-image: url('../images/icon_wifi.png');
 }
 
-.tv_icon {
-	display: inline-block;
-	background-image: url("../images/icon_tv.png");
-	background-size: cover;
-	width: 20px;
-	height: 20px;
-
-	margin-right: 10px;
+.amenity_icon.pets {
+	background-image: url('../images/icon_pets.png');
 }
 
-.wifi_icon {
-	display: inline-block;
-    background-image: url("../images/icon_wifi.png");
-    background-size: cover;
-	width: 20px;
-    height: 20px;
-
-	margin-right: 10px;
+/* REVIEWS */
+.places article .reviews {
+    margin-top:40px;    /* same as '.places article .amenities' */
+}
+.places article .reviews h2 {
+    font-size:16px;
+    border-bottom:1px #DDDDDD solid;
+    text-align:left;
+    padding-bottom:10px;
 }
 
-.pet_icon {
-	display: inline-block;
-    background-image: url("../images/icon_pets.png");
-	background-size: cover;
-    width: 20px;
-	height: 20px;
+.places article .reviews ul,
+.places article .reviews li {
+    list-style:none;
+    text-align:left;
+    padding-left:0px;
+}
 
-	margin-right: 10px;
+.places article .reviews ul {
+    margin-top: -50px;
+}
+
+.places article .reviews li {
+    margin-bottom:-10px;
+}
+.places article .reviews p {
+    margin-top:-12px;
+    font-size:12px;
+}
+
+/* IMPROVING ALL PLACE ARTICLES USING FLEXIBLE BOXES */
+.places .flex_list {
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:center;
+}
+
+.flex_list .flex_list_item {
+    display:flex;
 }
