--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,8 +1,8 @@
+/* STYLING FOR COMMON ELEMENTS */
 body {
-	margin:0px;
-	padding:0px;
-
-	color: #484848;
-	font-size: 14px;
-	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin:0 0 0 0;
+    padding:0 0 0 0;
+    color: #484848;
+    font-size: 14px;
+    font-family:Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
