--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,18 +1,17 @@
+/* STYLING FOR HEADER */
 header {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	
-	border-bottom: 1px solid #CCCCCC;
+    /* position: absolute;
+    top:0; */
+    height: 70px;
+    width: 100%;
+    border-bottom: 1px #CCCCCC solid;
 }
 
-#header_logo {
-	height: 100%;
-	width: 142px;
-
-	background-image: url("../images/logo.png");
-	background-repeat: no-repeat;
-	background-position: center;
-
-	margin-left: 20px;
+.header_logo {
+    height:100%;
+    width:140px;
+    margin-left:20px;
+    background-image:url('../images/logo.png');
+    background-repeat:no-repeat;
+    background-position:left;
 }
