--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,13 +1,17 @@
+/* STYLING FOR COMMON ELEMENTS */
 body {
-	margin:0px;
-	padding:0px;
-
-	color: #484848;
-	font-size: 14px;
-	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin:0 0 0 0;
+    padding:0 0 0 0;
+    color: #484848;
+    font-size: 14px;
+    font-family:Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    overflow-x:hidden;
 }
 
-.container {
+body .container {
     max-width: 1000px;
-    margin: 30px auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left:auto;
+    margin-right:auto;
 }
