--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,27 +1,35 @@
-.filters {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;	
+/* STYLING FOR FILTERS */
+section.filters {
+    background-color:white;
+    height:70px;
+    width:100%;
+    border:1px #DDDDDD solid;
+    border-radius:4px;
 }
 
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+/* PARENT */
+.btn {
+    position: relative;
 }
 
-button:hover {
-	opacity: 90%;
+/* CHILD */
+section button {
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    position:absolute;
+    right:30px;
+    top:12px;   /* 1/4 of this object's height property value */
+    font-size:18px;
+    color:#FFFFFF;
+    background-color:#FF5A5F;
+    height:48px;
+    width:20%;
+    border:none;
+    border-radius:4px;
+    margin-right:30px;
+}
+
+section button:hover {
+    opacity:90%;
 }
