--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,61 +1,58 @@
-.filters {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;	
+/* STYLING FOR FILTERS */
+section.filters {
+    /* box-sizing:border-box; */
+    background-color:white;
+    height:70px;
+    width:100%;
+    border:1px #DDDDDD solid;
+    border-radius:4px;
+    clear:both;
+    *zoom:1;
+}
+
+section.filters:before,
+section.filters:after{
+    clear:both;
+}
+
+/* CHILD */
+section button {
+    float:right;
+    font-size:18px;
+    color:#FFFFFF;
+    background-color:#FF5A5F;
+    height:48px;
+    width:20%;
+    border:none;
+    border-radius:4px;
+    margin-right:30px;
+    margin-top:11px;
+}
+
+section button:hover {
+    opacity:90%;
+}
+
+/* FILTER OBPIONS */
+.locations,
+.amenities {
+    height:100%;
+    width:25%;
+    float:left;
+    padding-left:5%;
 }
 
 .locations {
-	display: inline-block;
-	vertical-align: middle;
-
-	height: 100%;
-	width: 25%;
-
-	margin-left: 45px;
-	border-right: 1px solid #DDDDDD;
+    border-right:1px #DDDDDD solid;
 }
 
-.amenities {
-	display: inline-block;
-	vertical-align: middle;
-
-	height: 100%;
-    width: 25%;
-
-	margin-left: 45px;
+/* TYPOGRAPHY */
+.filters h3 {
+    font-weight:600;
+    margin-bottom:-16px;
 }
 
-h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-}
-
-h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 12px;
-}
-
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
-}
-
-button:hover {
-	opacity: 90%;
+.filters h4 {
+    font-weight:400;
+    font-size:14px;;
 }
