--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,101 +1,104 @@
-.filters {
-	display: block;
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+/* STYLING FOR FILTERS */
+section.filters {
+    /* box-sizing:border-box; */
+    background-color:white;
+    height:70px;
+    width:100%;
+    border:1px #DDDDDD solid;
+    border-radius:4px;
+    clear:both;
+    *zoom:1;
 }
 
-.locations {
-	display: inline;
-	vertical-align: middle;
-	float: left;
-	height: 100%;
-	width: 25%;
-
-	line-height: 20px;
-	border-right: 1px solid #DDDDDD;
+section.filters:before,
+section.filters:after{
+    clear:both;
 }
 
-.filter_amenities {
-	display: inline;
-	vertical-align: middle;
-	height: 100%;
-	float: left;
-    width: 25%;
-
-	line-height: 20px;
+/* CHILD */
+section button {
+    float:right;
+    font-size:18px;
+    color:#FFFFFF;
+    background-color:#FF5A5F;
+    height:48px;
+    width:20%;
+    border:none;
+    border-radius:4px;
+    margin-right:30px;
+    margin-top:11px;
 }
 
-.popover {
-	list-style-type: none;
-	display: none;
-	background-color: #FAFAFA;
-	width: 100%;
-
-	margin-left: -1px;
-	margin-top: 8px;
-	padding: 25px 0px;
-
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+section button:hover {
+    opacity:90%;
 }
 
-.locations:hover .popover {
-	display: inline-block;
+/* FILTER OBPIONS */
+.filters .locations,
+.filters .amenities {
+    height:100%;
+    width:25%;
+    float:left;
+    padding-left:5%;
 }
 
-.filter_amenities:hover .popover {
-	display: inline-block;
+.filters .locations {
+    border-right:1px #DDDDDD solid;
 }
 
-ul {
-	list-style-type: none;
-	padding: 0px;
-	padding-bottom: 20px;
+/* TYPOGRAPHY */
+.filters h3 {
+    font-weight:600;
+    margin-bottom:-16px;
 }
 
-li {
-}	
-
-h2 {
-	font-size: 16px;
-	padding-left: 30px;
-	margin: 0px;
+.filters h4 {
+    font-weight:400;
+    font-size:14px;;
 }
 
-h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-	padding-left: 45px;
+/* POPOVERS */
+.filters ul.popover {
+    position:relative;  /* Make it display on top of other elements */
+    display:none;   /* a popover is always invisible unless hovered */
+    background:#FAFAFA;
+    width:103.6%;
+    border:1px #DDDDDD solid;
+    border-radius:4px;
+    list-style:none;
+    margin-left:-20%;
+    margin-top:-2px;
+    padding-top:30px;
+    padding-bottom:30px;
+    z-index:1;
+    box-shadow:0px 5px 12px 0px rgba(0, 0, 0, 0.112);
 }
 
-h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	padding-left: 45px;
+.locations .state h2 {
+    font-size:16px;
+    margin-bottom:-1px;
 }
 
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+ul.popover li {
+    list-style:none;
+    margin-left:-9px;
 }
 
-button:hover {
-	opacity: 90%;
+ul.popover .state {
+    margin-left:-30px;
+}
+
+.state ul {
+    margin-left:-11px;
+    margin-top:3px;
+}
+
+.filters .locations .popover {
+    padding-top:16px;
+}
+
+/* Hover on filters for display of menu */
+.filters .locations:hover .popover,
+.filters .amenities:hover .popover {
+    display:block;
 }
