--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,32 +1,27 @@
-.places {
-	display: block;
-	margin: 45px auto;
-	text-align: center;
+/* STYLING FOR PLACES */
+section.places h1 {
+    font-size:30px;
+    padding-left:30px;
 }
 
-article {
-	display: inline-block;
-	width: 390px;
-	padding: 20px;
-	margin: 20px;
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
-	text-align: center;
+.places ul {
+    text-align:center;
 }
 
-h1 {
-	float: left;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
+.places li {
+    list-style:none;
+    display:inline-block;
 }
 
-article h2 {
-	font-size: 30px;
-	padding: 0px;
-	margin: auto;
+.places article {
+    width:390px;
+    padding:20px;
+    margin:20px;
+    border:#FF5A5F 1px solid;
+    border-radius:4px;
+    text-align:center;
+}
+
+.places article h2 {
+    font-size:30px;
 }
