--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,126 +1,97 @@
-.places {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 45px auto;
-	text-align: center;
+/* STYLING FOR PLACES */
+section.places h1 {
+    font-size:30px;
+    padding-left:30px;
 }
 
-article {
-	display: flex;
-	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
-
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 20px;
-	margin: 20px;
-
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
+.places ul {
+    text-align:center;
 }
 
-.headline {
-	display: flex;
-	flex-direction: row;
-	position: relative;
-
-	height: 80px;	
-	width: 100%;
+.places li {
+    list-style:none;
+    display:inline-block;
 }
 
+.places article {
+    position:relative;  /* necessary for price_by_night */
+    width:390px;
+    padding:20px;
+    margin:20px;
+    border:#FF5A5F 1px solid;
+    border-radius:4px;
+    text-align:center;
+}
+
+.places article h2 {
+    font-size:30px;
+    margin-top:5px;
+    margin-bottom:50px;
+}
+
+/* MORE DETIAL FOR ARTICLE */
 .price_by_night {
-	display: flex;
-	justify-content: center;
-	align-self: flex-end;
-
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
-	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
-	min-width: 60px;
-	height: 60px;
+    position:absolute;
+    top:20px;
+    right:20px;
+    float:right;
+    color:#FF5A5F;
+    border:#FF5A5F 4px solid;
+    border-radius:50%;
+    min-width:60px;
+    height:60px;
+    font-size:30px;
+    line-height:60px;
+    padding:5px;
 }
 
+/* INFORMATION SECTION */
 .information {
-	display: block;
-	height: 80px;
-	width: 100%;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
-
-	padding-top: 5px;
-	padding-bottom: 12px;
-	margin-top: 10px;
-	margin-bottom: 20px;
+    position:relative;
+    height:80px;
+    line-height:80px;
+    border-top: 1px #DDDDDD solid;
+    border-bottom:1px #DDDDDD solid;
 }
 
-.max_guest, .number_rooms, .number_bathrooms {
-	display: inline-block;
-	width: 100px;
-	text-align: center;
-	margin: 0px auto;
+.information .max_guest,
+.information .number_rooms,
+.information .number_bathrooms {
+    display:inline-block;
+    width:100px;
+    height:100%;
 }
 
+.icon {
+    width:100%;
+    height:100%;
+    background-repeat:no-repeat;
+    background-position:top;
+    padding-top:5px;
+    margin-top:5px;
+    margin-bottom:-80px;
+}
+
+.icon.group {
+    background-image:url("../images/icon_group.png");
+}
+
+.icon.bed {
+    background-image:url("../images/icon_bed.png");
+}
+
+.icon.bath {
+    background-image:url("../images/icon_bath.png");
+}
+
+/* USER */
 .user {
-	margin-top: 5px;
-	margin-bottom: 5px;	
+    text-align:left;
+    margin-top:25px;
+    margin-bottom:15px;
 }
 
+/* DESCRIPTION */
 .description {
-	text-align: left;
-}
-
-h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
-}
-
-article h2 {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
-}
-
-.guest_icon {
-	display: inline-block;
-	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 50px;
-	height: 50px;
-}
-
-.bed_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
-}
-
-.bath_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+    text-align:left;
 }
