--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -72,6 +72,9 @@ section button:hover {
     padding-bottom:30px;
     z-index:1;
     box-shadow:0px 5px 12px 0px rgba(0, 0, 0, 0.112);
+    /* Allow vertical scrolling */
+    overflow-y: auto;
+    max-height: 300px;
 }
 
 .locations .state h2 {
